# PyStudy

./: .env.example  .gitignore  AGENTS.md  README.md  pyproject.toml  start.ps1
agents/: agents-maintenance.md  coding-style.md  development.md  frontend-coding-style.md  git.md  project.md  testing.md
app/: __init__.py  main.py
app/api/: dependencies.py  router.py
app/api/routers/: auth.py
app/core/: config.py  security.py
app/db/: __init__.py  base.py  redis.py  session.py
app/models/: __init__.py  user.py
app/repositories/: user.py
app/schemas/: auth.py  user.py
app/services/: auth.py
dev-doc/: connections.md
docs/superpowers/plans/: 2026-06-09-agent-rules.md  2026-06-09-authentication.md  2026-06-09-sqlalchemy-base-model.md  2026-06-09-startup-table-creation.md  2026-06-09-user-model.md
docs/superpowers/specs/: 2026-06-09-agent-rules-design.md  2026-06-09-authentication-design.md  2026-06-09-sqlalchemy-base-model-design.md  2026-06-09-startup-table-creation-design.md  2026-06-09-user-model-design.md
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: api.ts  auth.ts  router.ts  styles.css  types.ts
frontend/src/views/: LoginView.vue  MarketplaceView.vue  RegisterView.vue
tests/: test_app.py  test_auth_api.py  test_config.py  test_db_base.py  test_db_session.py  test_security.py  test_user_model.py
